# db_5sem

./: create_db.ddl  data.dcl  data.dml  inserts.dcl  main.py  manage.py  pyproject.toml  requirements.txt  tabels.ddl
aircraft_service/: asgi.py  settings.py  urls.py  wsgi.py
service/: admin.py  dashboard.py  models.py  serializers.py  urls.py  views.py
service/migrations/: 0001_initial.py  0002_alter_malfunction_date_create_alter_order_order_date_and_more.py
service/templates/admin/: index.html  test_pages_dashboard.html
service/templates/func/: show_func.html
sql/: create_db.ddl  inserts.ddl  query.ddl  window_functions.sql
